<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ruben.takeme.CreateNewActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/create_new_form"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageButton
                android:background="@drawable/action_bar_create_new"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/create_new_icon"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true" />

            <EditText
                android:gravity="start"
                android:maxLines="5"
                android:minLines="5"
                android:hint="@string/details_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/create_new_short_description" />

            <Button
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_animal"
                android:id="@+id/create_new_choose_animal" />

            <Button
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_breed"
                android:id="@+id/create_new_choose_breed" />

            <Button
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_category"
                android:id="@+id/create_new_choose_category" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:hint="@string/how_many_animals"
                android:ems="10"
                android:id="@+id/create_new_how_many" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
